--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <title>Sobloxsy - Main</title>
 
             <!-- Search & Open Graph-->
-            <meta name="description" content="hello.">
+            <meta name="description" content="hello lol.">
             <meta name="google-site-verification" content="0">
 
             <meta property="og:url" content="https://sobloxsy.github.com/">
