--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <link rel="stylesheet" href="/css/lib/normalize.min.css">
 
         <!-- Polyfills -->
-        <script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/js/polyfill.min.js"></script>
+        <script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/js/polyfill.min.js"></script>
 
         <!-- Analytics (GA) -->
         <script>
@@ -3295,6 +3295,7 @@ a.social-messages-profile-link {
     
 
 <a class="hss-abp-subscribe" href="abp:subscribe?location=https://www.joinhoney.com/whitelist/honey-smart-shopping.txt&amp;title=Honey-Smart-Shopping" style="position: fixed; display: block; opacity: 0; z-index: 2147483647;"></a><div></div>
+
 
 
 
