--- a/index.html
+++ b/index.html
@@ -884,7 +884,7 @@ row to appear to contain overflow. */
   z-index: 10;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
-  background-color: #4d97ff;
+  background-color: #3d3d3d;
   width: 100%;
   /* NOTE: Height should match offset settings in main.scss file */
   height: 50px; }
