--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <meta property="og:type" content="website">
             <meta property="og:title" content="Sobloxsy - Main">
             <meta property="og:description" content="Hello.">
-            <meta property="og:image" content="https://scratch.mit.edu/images/scratch-og.png">
+            <meta property="og:image" content="https://sobloxsy.github.io/images/logo_sm.png">
             <meta property="og:image:type" content="image/png">
             <meta property="og:image:width" content="986">
             <meta property="og:image:height" content="860">
