--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <!-- Search & Open Graph-->
             <meta name="description" content="hello lol.">
             <meta name="google-site-verification" content="0">
-
+            <script data-ad-client="ca-pub-5751343033961763" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <meta property="og:url" content="https://sobloxsy.github.com/">
             <meta property="og:type" content="website">
             <meta property="og:title" content="Sobloxsy - Main">
