--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
         <meta name="format-detection" content="telephone=no">
 
         
-            <title>Scratch - About</title>
+            <title>Sobloxsy - About</title>
 
             <!-- Search & Open Graph-->
             <meta name="description" content="Scratch is a free programming language and online community where you can create your own interactive stories, games, and animations.">
-            <meta name="google-site-verification" content="m_3TAXDreGTFyoYnEmU9mcKB4Xtw5mw6yRkuJtXRKxM">
+            <meta name="" content="">
 
-            <meta property="og:url" content="https://scratch.mit.edu/">
+            <meta property="og:url" content="">
             <meta property="og:type" content="website">
             <meta property="og:title" content="Scratch - About">
             <meta property="og:description" content="Scratch is a free programming language and online community where you can create your own interactive stories, games, and animations.">
