--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <meta property="og:image:width" content="986">
             <meta property="og:image:height" content="860">
         
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L9VPZG7Y31"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L9VPZG7Y31');
+</script>
 
         <!-- Favicon & CSS normalize -->
         <link rel="shortcut icon" href="/favicon.ico">
