--- a/login.html
+++ b/login.html
@@ -100,7 +100,7 @@ html,
 body {
   display: block;
   margin: 0;
-  background-color: #4280d7;
+  background-color: #3d3d3d;
   padding: 0;
   color: #575e75;
   font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif; }
