--- a/nav.html
+++ b/nav.html
@@ -1,1 +1,76 @@
 <div class="" id="navigation"><div class="inner"><ul><li class="logo"><a aria-label="Scratch" href="/"></a></li><li class="link create"></li><li class="link explore"><a href="https://www.roblox.com/groups/6376490/Lego-Studios#!/about"><span>My Group</span></a></li><li class="link ideas"><a href="/create"><span>Create</span></a></li><li class="link about"><a href="/about"><span>About</span></a></li><li class="search"><form class="form" novalidate=""><button class="button btn-search" type="submit"></button><div class="form-group row no-label"><label class="control-label col-sm-3" data-required="false" for="frc-q-1088"></label><div class="col-sm-9"><input class="input" aria-label="Search" name="q" placeholder="Search" type="text" id="frc-q-1088" value=""><span class="help-block">Not Required</span></div></div></form></li><li class="link right join"><a class="registrationLink" href="#"><span>Join The Team</span></a></li><li class="link right login-item"><a class="ignore-react-onclickoutside" href="/login.html"><span>Admin Sign in</span></a><div class="dropdown with-arrow"><div class="login"><form class="form" novalidate=""><label for="username"><span>Username</span></label><div class="form-group row no-label"><label class="control-label col-sm-3" data-required="true" for="frc-username-1088"><span class="required-symbol"> *</span></label><div class="col-sm-9"><input class="input" required="" maxlength="30" name="username" type="text" id="frc-username-1088" value="Legohackz123"></div></div><label for="password"><span>Password</span></label><div class="form-group row no-label"><label class="control-label col-sm-3" data-required="true" for="frc-password-1088"><span class="required-symbol"> *</span></label><div class="col-sm-9"><input class="input" required="" name="password" type="password" id="frc-password-1088" value="ua2J5p9GKLRvDnF"></div></div><div class="flex-row submit-row"><button class="button submit-button white" type="submit"><span>Sign in</span></button><a href="/accounts/password_reset/"><span>Need Help?</span></a></div></form></div></div></li></ul></div></div>
+
+</style><style type="text/css">
+  
+#navigation {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);
+  background-color: #3d3d3d;
+  width: 100%;
+  /* NOTE: Height should match offset settings in main.scss file */
+  height: 50px; }
+  #navigation.staging {
+    background-color: #ffab1a; }
+  .ie9 #navigation {
+    display: table;
+    table-layout: fixed; }
+  #navigation .inner > ul {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+    padding: 0;
+    height: 50px;
+    list-style: none;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start; }
+    .ie9 #navigation .inner > ul {
+      display: table-row; }
+    #navigation .inner > ul > li {
+      display: inline-block;
+      position: relative;
+      float: left;
+      margin: 0;
+      height: 100%;
+      -webkit-align-self: flex-start;
+          -ms-flex-item-align: start;
+              align-self: flex-start; }
+      #navigation .inner > ul > li.right {
+        float: right;
+        margin-left: auto;
+        -webkit-align-self: flex-end;
+            -ms-flex-item-align: end;
+                align-self: flex-end; }
+        .ie9 #navigation .inner > ul > li.right {
+          float: none; }
+        #navigation .inner > ul > li.right a:hover {
+          background-color: rgba(0, 0, 0, 0.1); }
+      .ie9 #navigation .inner > ul > li {
+        display: table-cell;
+        float: none;
+        height: 50px;
+        vertical-align: bottom; }
+  #navigation .link > a {
+    display: block;
+    padding: 13px 15px 4px 15px;
+    height: 33px;
+    text-decoration: none;
+    white-space: nowrap;
+    color: white;
+    font-size: .85rem;
+    font-weight: bold; }
+    #navigation .link > a:hover {
+      background-color: rgba(0, 0, 0, 0.1); }
+</style><style type="text/css">/*
