--- a/nav.html
+++ b/nav.html
@@ -230,3 +230,12 @@
     #navigation .inner .mystuff {
       display: none; } }
 </style><style type="text/css">
+
+  html,
+body {
+  display: block;
+  margin: 0;
+  background-color: #4280d7;
+  padding: 0;
+  color: #575e75;
+  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif; }
