--- a/nav.html
+++ b/nav.html
@@ -244,3 +244,15 @@ body {
   padding: 0;
   color: #575e75;
   font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif; }
+
+  .input {
+  transition: all .5s ease;
+  margin-bottom: .75rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  background-color: #fafafa;
+  padding: 0 1rem;
+  height: 3rem;
+  color: #575e75;
+  font-size: .875rem;
+  /* IE10/11-specific style resets */ }
