--- a/404.html
+++ b/404.html
@@ -1,7 +1,16 @@
 <html><head>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-     
-    <meta name="google-site-verification" content="m_3TAXDreGTFyoYnEmU9mcKB4Xtw5mw6yRkuJtXRKxM">
+	
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script> 
+    $(function(){
+      $("#includedContent").load("nav.html"); 
+    });
+    </script> 
+
+     <div id="includedContent"></div>
+
+    <meta name="google-site-verification" content="0">
     <title>Scratch - Imagine, Program, Share</title>
     
     <link rel="stylesheet" href="//cdn.scratch.mit.edu/scratchr2/static/__6685a039f09d986057295dd59de6561c__/vendor/redmond/jquery.ui.all.css">
