--- a/testplace.html
+++ b/testplace.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script> 
     $(function(){
-      $("#includedContent").load("nav.html"); 
+      $("#includedContent").load("https://sobloxsy.com/nav.html"); 
     });
     </script> 
     
