--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   
 
     <meta name="google-site-verification" content="0">
-    <title>Sobloxsy - Error>
+    <title>Sobloxsy - Error</title>
     
     <link rel="stylesheet" href="//cdn.scratch.mit.edu/scratchr2/static/__6685a039f09d986057295dd59de6561c__/vendor/redmond/jquery.ui.all.css">
     
