--- a/nav.html
+++ b/nav.html
@@ -2,6 +2,10 @@
 
 <div class="" id="navigation"><div class="inner"><ul><li class="logo"><a a#topnav ul.site-nav liria-label="Scratch" href="/"></a></li><li class="link create"></li><li class="link explore"><a href="https://www.roblox.com/groups/6376490/Lego-Studios#!/about"><span>My Group</span></a></li><li class="link ideas"><a href="/create"><span>Create</span></a></li><li class="link about"><a href="/about"><span>About</span></a></li><li class="search"><form class="form" novalidate=""><button class="button btn-search" type="submit"></button><div class="form-group row no-label"><label class="control-label col-sm-3" data-required="false" for="frc-q-1088"></label><div class="col-sm-9"><input class="input" aria-label="Search" name="q" placeholder="Search" type="text" id="frc-q-1088" value=""><span class="help-block">Not Required</span></div></div></form></li><li class="link right join"><a class="registrationLink" href="#"><span>Join The Team</span></a></li><li class="link right login-item"><a class="ignore-react-onclickoutside" href="/login.html"><span>Admin Sign in</span></a><div class="dropdown with-arrow"><div class="login"><form class="form" novalidate=""><div class="form-group row no-label"><label class="control-label col-sm-3" data-required="true" for="frc-password-1088"></label><div class="d"><input class="" required="" name="" type="" id="" value=""></div></div></form></div></div></li></ul></div></div>
 
+<script async src="https://cse.google.com/cse.js?cx=b32181a0452f9ec07"></script>
+
+<div class="gcse-search"></div>
+
 </style><style type="text/css">
   
 ::selection {
