--- a/embed.html
+++ b/embed.html
@@ -4,10 +4,11 @@
 <style> 
 iframe {
   border: 2px solid;
-  padding: 20px; 
+  padding: 0px; 
   width: 300px;
   resize: both;
   overflow: auto;
+  border-radius: 25px;
 }
 </style>
 
