--- a/embed.html
+++ b/embed.html
@@ -10,7 +10,7 @@ iframe {
 }
 </style>
 
-<iframe src="https://www.bing.com/" width="100%" height="500" style="border:none; allowfullscreen="true">
+<iframe src="https://www.bing.com/" width="auto" height="auto" style="border:none; allowfullscreen="true">
 </iframe>
 
 </body>
