--- a/embed.html
+++ b/embed.html
@@ -8,9 +8,14 @@ iframe {
   resize: both;
   border-radius: 10px;
 }
+html{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 </style>
 
-<iframe src="https://www.bing.com/" width="auto" height="auto" style="border:none; allowfullscreen="true">
+<iframe src="https://www.bing.com/" width="100%" height="100%" style="border:none; allowfullscreen="true">
 </iframe>
 
 </body>
