--- a/embed.html
+++ b/embed.html
@@ -18,5 +18,14 @@ html, body {
 <iframe src="https://www.bing.com/" width="100%" height="100%" style="border:none; allowfullscreen="true">
 </iframe>
 
+    <script>
+function myFunction() {
+ 
+  var txt = prompt("URL?", "www.bing.com");
+
+  document.getElementById("src").innerHTML = txt;
+}
+</script>                                                                                                    
+                                                                                                         
 </body>
 </html>
