--- a/about.html
+++ b/about.html
@@ -27,6 +27,13 @@
         <!-- Favicon & CSS normalize -->
         <link rel="shortcut icon" href="/favicon.ico">
         <link rel="stylesheet" href="/css/lib/normalize.min.css">
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script> 
+        $(function(){
+        $("#includedContent").load("https://sobloxsy.com/nav.html"); 
+        });
+        </script> 
 
         <!-- Polyfills -->
         <script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/js/polyfill.min.js"></script>
