--- a/logintest.html
+++ b/logintest.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>	
-		<title>JavaScript Simple Login System</title>
+		<title>Login Testing</title>
 		<link rel="shortcut icon" href="favicon.ico">
 	</head>
 	<body>
 		<form>
-			<input type="text" id="username" placeholder="Choose Username">
-			<input type="password" id="password" placeholer="Choose Password">
-			<button type="button" onclick="getInfo()">Click Me</button>
+			<input type="text" id="username" placeholder="Username">
+			<input type="password" id="password" placeholer="Password">
+			<button type="button" onclick="getInfo()">login</button>
 		</form>
 
 		<script src="js/main.js"></script>
