--- a/users/DaOwner.html
+++ b/users/DaOwner.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="//cdn.scratch.mit.edu/scratchr2/static/__6685a039f09d986057295dd59de6561c__/vendor/redmond/jquery.ui.all.css">
     
+	<link rel="stylesheet" href="/css/lib/normalize.min.css">
+	
         <link href="//cdn.scratch.mit.edu/scratchr2/static/__6685a039f09d986057295dd59de6561c__/css/main.css" rel="stylesheet" type="text/css">
    
    <link rel="stylesheet" href="//cdn.scratch.mit.edu/scratchr2/static/__6685a039f09d986057295dd59de6561c__//css/handheld.css" media="handheld, only screen and (max-device-width:480px)">
