--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 
   gtag('config', 'G-L9VPZG7Y31');
 </script>
+        
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script> 
+    $(function(){
+      $("#includedContent").load("https://sobloxsy.com/nav.html"); 
+    });
+    </script> 
 
         <!-- Favicon & CSS normalize -->
         <link rel="shortcut icon" href="/favicon.ico">
