--- a/books/index.html
+++ b/books/index.html
@@ -44,7 +44,7 @@ font-family: gothammedium,sans-serif;
 <body>
 
 <h1>Sobloxsy Book PDFs.</h1>
-<button>Percy Jackson Titans</button>
+<button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
 <button>Percy Jackson Titans</button>
 <button>Percy Jackson Titans</button>
 
