--- a/books/index.html
+++ b/books/index.html
@@ -39,6 +39,10 @@ border-radius: 15px;
 font-family: gothammedium,sans-serif;
 cursor: pointer;
 }
+
+button:hover {
+background: #858585;
+}
 </style>
 
 </head>
