--- a/books/index.html
+++ b/books/index.html
@@ -50,7 +50,7 @@ background: #858585;
 
 <h1>Sobloxsy Book PDFs.</h1>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
-<button>Percy Jackson Titans</button>
+<button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';">Percy Jackson Battle Of The Labyrinth</button>
 <button>Percy Jackson Titans</button>
 
 
