--- a/books/index.html
+++ b/books/index.html
@@ -22,6 +22,15 @@
 
 }
 
+@font-face {
+    font-family: 'product_sansregular';
+    src: url('https://files.sobloxsy.com/product_sans_regular-webfont.woff2') format('woff2'),
+         url('https://files.sobloxsy.com/product_sans_regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+    
 body { 
 font-family: gothambold,sans-serif;
 background: #474747;
@@ -48,7 +57,7 @@ background: #858585;
 </head>
 <body>
 
-<h1>Sobloxsy Book PDFs.</h1>
+<h1 <style>font-family: product_sansregular,sans-serif;</style> >Sobloxsy Book PDFs.</h1>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';">Percy Jackson Battle Of The Labyrinth</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/TuckEverlasting.PDF';">Tuck Everlasting</button>
