--- a/books/index.html
+++ b/books/index.html
@@ -57,7 +57,7 @@ background: #858585;
 </head>
 <body>
 
-<h1 <style>font-family: product_sansregular,sans-serif;</style> >Sobloxsy Book PDFs.</h1>
+<h1 style="font-family: product_sansregular,sans-serif;">Sobloxsy Book PDFs.</h1>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';">Percy Jackson Battle Of The Labyrinth</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/TuckEverlasting.PDF';">Tuck Everlasting</button>
