--- a/books/index.html
+++ b/books/index.html
@@ -47,10 +47,12 @@ color: white;
 border-radius: 15px;
 font-family: gothammedium,sans-serif;
 cursor: pointer;
+transition-duration: 0.4s;
 }
 
 button:hover {
 background: #858585;
+border-radius: 24px;
 }
 </style>
 
