--- a/books/index.html
+++ b/books/index.html
@@ -48,6 +48,7 @@ border-radius: 15px;
 font-family: gothammedium,sans-serif;
 cursor: pointer;
 transition-duration: 0.4s;
+outline: none;
 }
 
 button:hover {
