--- a/books/index.html
+++ b/books/index.html
@@ -32,7 +32,7 @@
 }
     
 body { 
-font-family: gothambold,sans-serif; 
+font-family: gothambold,sans-serif;
 background: #474747;
 color: white;
 text-align: center;
@@ -54,13 +54,23 @@ outline: none;
 button:hover {
 background: #858585;
 border-radius: 24px;
+font-size: 17px;
+}
+
+h1 {
+transition-duration: 0.4s;
+}
+
+h1:hover {
+font-size: 40px;
 }
 </style>
 
 </head>
 <body>
 
-<h1 style="font-family: product_sansregular,sans-serif;">Sobloxsy Book PDFs.</h1>
+<h1 style="font-family: product_sansregular,sans-serif;">Sobloxsy Book PDFs.</h1><img src="https://sobloxsy.com/books/bookbysobloxsy.png">
+
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';">Percy Jackson Battle Of The Labyrinth</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/TuckEverlasting.PDF';">Tuck Everlasting</button>
