--- a/books/index.html
+++ b/books/index.html
@@ -59,17 +59,24 @@ font-size: 17px;
 
 h1 {
 transition-duration: 0.4s;
+font-family: product_sansregular,sans-serif;
 }
 
 h1:hover {
 font-size: 40px;
+}
+
+img {
+border-radius: 20px;
+width: auto;
+height: auto;
 }
 </style>
 
 </head>
 <body>
 
-<h1 style="font-family: product_sansregular,sans-serif;">Sobloxsy Book PDFs.</h1><img src="https://sobloxsy.com/books/bookbysobloxsy.png">
+<img src="https://sobloxsy.com/books/bookbysobloxsy.png" align="left" /><h1>Sobloxsy Book PDFs.</h1>
 
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';">Percy Jackson Battle Of The Labyrinth</button>
