--- a/books/index.html
+++ b/books/index.html
@@ -68,7 +68,7 @@ font-size: 40px;left
 
 img {
 border-radius: 20px;
-width: 150px;
+width: 100;
 height: auto;
 }
 </style>
@@ -76,7 +76,7 @@ height: auto;
 </head>
 <body>
 
-<img src="https://sobloxsy.com/books/sobloxsybooks.png" align="left" /><h1>Sobloxsy Book PDFs.</h1>
+<img src="https://sobloxsy.com/books/sobloxsybooks.png" align="center" /><h1>Sobloxsy Book PDFs.</h1>
 
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';">Percy Jackson Battle Of The Labyrinth</button>
