--- a/404.html
+++ b/404.html
@@ -5,89 +5,99 @@
 
 <style id="webmakerstyle">
 @font-face {
-    font-family: 'GothamBold';
-    src: url('https://files.sobloxsy.com/Gotham-Bold.eot');
-    src: url('https://files.sobloxsy.com/Gotham-Bold.eot?#iefix') format('embedded-opentype'),
-        url('https://files.sobloxsy.com/Gotham-Bold.woff2') format('woff2'),
-        url('https://files.sobloxsy.com/Gotham-Bold.woff') format('woff'),
-        url('https://files.sobloxsy.com/Gotham-Bold.ttf') format('truetype'),
-        url('https://files.sobloxsy.com/Gotham-Bold.svg#Gotham-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "GothamBold";
+  src: url("https://files.sobloxsy.com/Gotham-Bold.eot");
+  src: url("https://files.sobloxsy.com/Gotham-Bold.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://files.sobloxsy.com/Gotham-Bold.woff2") format("woff2"),
+    url("https://files.sobloxsy.com/Gotham-Bold.woff") format("woff"),
+    url("https://files.sobloxsy.com/Gotham-Bold.ttf") format("truetype"),
+    url("https://files.sobloxsy.com/Gotham-Bold.svg#Gotham-Bold") format("svg");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'GothamMedium';
-    src: url('https://files.sobloxsy.com/Gotham-Medium.eot');
-    src: url('https://files.sobloxsy.com/Gotham-Medium.eot?#iefix') format('embedded-opentype'),
-        url('https://files.sobloxsy.com/Gotham-Medium.woff2') format('woff2'),
-        url('https://files.sobloxsy.com/Gotham-Medium.woff') format('woff'),
-        url('https://files.sobloxsy.com/Gotham-Medium.ttf') format('truetype'),
-        url('https://files.sobloxsy.com/Gotham-Medium.svg#Gotham-Medium') format('svg');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "GothamMedium";
+  src: url("https://files.sobloxsy.com/Gotham-Medium.eot");
+  src: url("https://files.sobloxsy.com/Gotham-Medium.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://files.sobloxsy.com/Gotham-Medium.woff2") format("woff2"),
+    url("https://files.sobloxsy.com/Gotham-Medium.woff") format("woff"),
+    url("https://files.sobloxsy.com/Gotham-Medium.ttf") format("truetype"),
+    url("https://files.sobloxsy.com/Gotham-Medium.svg#Gotham-Medium")
+      format("svg");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'GothamBold1';
-    src: url('https://files.sobloxsy.com/Gotham-Bold_1.eot');
-    src: url('https://files.sobloxsy.com/Gotham-Bold_1.eot?#iefix') format('embedded-opentype'),
-        url('https://files.sobloxsy.com/Gotham-Bold_1.woff2') format('woff2'),
-        url('https://files.sobloxsy.com/Gotham-Bold_1.woff') format('woff'),
-        url('https://files.sobloxsy.com/Gotham-Bold_1.ttf') format('truetype'),
-        url('https://files.sobloxsy.com/Gotham-Bold_1.svg#Gotham-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
+  font-family: "GothamBold1";
+  src: url("https://files.sobloxsy.com/Gotham-Bold_1.eot");
+  src: url("https://files.sobloxsy.com/Gotham-Bold_1.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://files.sobloxsy.com/Gotham-Bold_1.woff2") format("woff2"),
+    url("https://files.sobloxsy.com/Gotham-Bold_1.woff") format("woff"),
+    url("https://files.sobloxsy.com/Gotham-Bold_1.ttf") format("truetype"),
+    url("https://files.sobloxsy.com/Gotham-Bold_1.svg#Gotham-Bold")
+      format("svg");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'GothamBlack';
-    src: url('https://files.sobloxsy.com/Gotham-Black.eot');
-    src: url('https://files.sobloxsy.com/Gotham-Black.eot?#iefix') format('embedded-opentype'),
-        url('https://files.sobloxsy.com/Gotham-Black.woff2') format('woff2'),
-        url('https://files.sobloxsy.com/Gotham-Black.woff') format('woff'),
-        url('https://files.sobloxsy.com/Gotham-Black.ttf') format('truetype'),
-        url('https://files.sobloxsy.com/Gotham-Black.svg#Gotham-Black') format('svg');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "GothamBlack";
+  src: url("https://files.sobloxsy.com/Gotham-Black.eot");
+  src: url("https://files.sobloxsy.com/Gotham-Black.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://files.sobloxsy.com/Gotham-Black.woff2") format("woff2"),
+    url("https://files.sobloxsy.com/Gotham-Black.woff") format("woff"),
+    url("https://files.sobloxsy.com/Gotham-Black.ttf") format("truetype"),
+    url("https://files.sobloxsy.com/Gotham-Black.svg#Gotham-Black")
+      format("svg");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'GothamMedium1';
-    src: url('https://files.sobloxsy.com/Gotham-Medium_1.eot');
-    src: url('https://files.sobloxsy.com/Gotham-Medium_1.eot?#iefix') format('embedded-opentype'),
-        url('https://files.sobloxsy.com/Gotham-Medium_1.woff2') format('woff2'),
-        url('https://files.sobloxsy.com/Gotham-Medium_1.woff') format('woff'),
-        url('https://files.sobloxsy.com/Gotham-Medium_1.ttf') format('truetype'),
-        url('https://files.sobloxsy.com/Gotham-Medium_1.svg#Gotham-Medium') format('svg');
-    font-weight: 500;
-    font-style: normal;
-    font-display: swap;
+  font-family: "GothamMedium1";
+  src: url("https://files.sobloxsy.com/Gotham-Medium_1.eot");
+  src: url("https://files.sobloxsy.com/Gotham-Medium_1.eot?#iefix")
+      format("embedded-opentype"),
+    url("https://files.sobloxsy.com/Gotham-Medium_1.woff2") format("woff2"),
+    url("https://files.sobloxsy.com/Gotham-Medium_1.woff") format("woff"),
+    url("https://files.sobloxsy.com/Gotham-Medium_1.ttf") format("truetype"),
+    url("https://files.sobloxsy.com/Gotham-Medium_1.svg#Gotham-Medium")
+      format("svg");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
-h1, p, a {
+h1,
+p,
+a {
   text-align: center;
 }
 
 h1 {
-  font-family: 'GothamBold1';
+  font-family: "GothamBold1";
   font-size: 40px;
 }
 
 p {
-  font-family: 'GothamMedium1';
+  font-family: "GothamMedium1";
   font-size: 15px;
 }
 
 a {
   text-decoration: none;
-  color: rgb(221, 218, 218)
+  color: rgb(221, 218, 218);
 }
-
 
 .logo {
   display: block;
@@ -103,7 +113,7 @@ a {
   margin-right: auto;
   background-color: transparent;
   color: transparent;
-  margin-bottom: -30px; 
+  margin-bottom: -30px;
 }
 
 .box {
@@ -113,8 +123,16 @@ a {
 
 body {
   background: #555557;
-  color: white
-} 
+  color: white;
+}
+
+.wjka {
+  text-align: center;
+  font-family: "GothamMedium1", sans-serif;
+  position: fixed;
+  bottom: 0px;
+}
+
 </style>
 </head>
 <body>
