--- a/books/index.html
+++ b/books/index.html
@@ -1,77 +1,96 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Sobloxsy Books.</title>
-<style>
+<meta charset="UTF-8" />
 
+<style id="webmakerstyle">
 @font-face {
-    font-family: 'gothambold';
-    src: url('https://files.sobloxsy.com/gothambold-webfont.woff2') format('woff2'),
-         url('https://files.sobloxsy.com/gothambold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-    
-@font-face {
-    font-family: 'gothammedium';
-    src: url('https://files.sobloxsy.com/gothammedium-webfont.woff2') format('woff2'),
-         url('https://files.sobloxsy.com/gothammedium-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: "gothambold";
+  src: url("https://files.sobloxsy.com/gothambold-webfont.woff2")
+      format("woff2"),
+    url("https://files.sobloxsy.com/gothambold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'product_sansregular';
-    src: url('https://files.sobloxsy.com/product_sans_regular-webfont.woff2') format('woff2'),
-         url('https://files.sobloxsy.com/product_sans_regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: "gothammedium";
+  src: url("https://files.sobloxsy.com/gothammedium-webfont.woff2")
+      format("woff2"),
+    url("https://files.sobloxsy.com/gothammedium-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
-    
-body { 
-font-family: gothambold,sans-serif;
-background: #474747;
-color: white;
-text-align: center;
+
+@font-face {
+  font-family: "product_sansregular";
+  src: url("https://files.sobloxsy.com/product_sans_regular-webfont.woff2")
+      format("woff2"),
+    url("https://files.sobloxsy.com/product_sans_regular-webfont.woff")
+      format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: gothambold, sans-serif;
+  background: #555557;
+  color: white;
+  text-align: center;
 }
 
 button {
-background: #363636;
-margin: 5px;
-padding: 15px;
-border: 5px;
-color: white;
-border-radius: 15px;
-font-family: gothammedium,sans-serif;
-cursor: pointer;
-transition-duration: 0.4s;
-outline: none;
+  background: #363636;
+  margin: 5px;
+  padding: 15px;
+  border: 5px;
+  color: white;
+  border-radius: 15px;
+  font-family: gothammedium, sans-serif;
+  cursor: pointer;
+  transition-duration: 0.4s;
+  outline: none;
 }
 
 button:hover {
-background: #858585;
-border-radius: 24px;
-font-size: 17px;
+  background: #858585;
+  border-radius: 24px;
+  font-size: 17px;
 }
 
 h1 {
-transition-duration: 0.4s;
-font-family: product_sansregular,sans-serif;
-}
-
-h1:hover {
-font-size: 40px;left
+  transition-duration: 0.4s;
+  font-family: product_sansregular, sans-serif;
 }
 
 img {
-border-radius: 20px;
-width: 100px;
-height: auto;
+  border-radius: 10px;
+  width: 100px;
+  height: auto;
+}
+
+.wjka {
+  text-align: center;
+  font-family: "gothammedium", sans-serif;
+  position: fixed;
+  bottom: 0px;
+}
+
+.PJBOTL {
+  width: 130px;
+  height: 180px;
+}
+
+.PJBOTL:hover {
+  width: 140px;
 }
 </style>
+</head>
+<body>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Sobloxsy Books.</title>
 
 </head>
 <body>
@@ -79,9 +98,8 @@ height: auto;
 <img src="https://sobloxsy.com/books/susobloxsybooks.png" align="center" /><h1>Sobloxsy Book PDFs.</h1>
 
 <button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonTitans.pdf';">Percy Jackson Titans</button>
-<button onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';">Percy Jackson Battle Of The Labyrinth</button>
+<button  class="PJBOTL" onclick="window.location.href='https://sobloxsy.com/books/PercyJacksonBattleOfTheLamb.pdf';"><img src="https://files.sobloxsy.com/PJBOTL.png"><p></p></button>
 <button onclick="window.location.href='https://sobloxsy.com/books/TuckEverlasting.PDF';">Tuck Everlasting</button>
-
 
 </body>
 </html>
