--- a/404.html
+++ b/404.html
@@ -116,11 +116,6 @@ a {
   margin-bottom: -30px;
 }
 
-.box {
-  position: relative;
-  top: 100px;
-}
-
 body {
   background: #555557;
   color: white;
@@ -133,13 +128,43 @@ body {
   bottom: 0px;
 }
 
+.center {
+  height: 60%; /* Set your own height: percents, ems, whatever! */
+  width: 50%; /* Set your own width: percents, ems, whatever! */
+  overflow: auto; /* Recommended in case content is larger than the container */
+  margin: auto; /* Center the item vertically & horizontally */
+  position: absolute; /* Break it out of the regular flow */
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0; /* Set the bounds in which to center it, relative to its parent/container */
+}
+
+.fourofour {
+   color: #fff;
+font-size: 70px;
+  font-weight: bold;
+  text-shadow: 
+    0 1px 0 #ccc, 
+    0 2px 0 #c9c9c9, 
+    0 3px 0 #bbb, 
+    0 4px 0 #b9b9b9, 
+    0 5px 0 #aaa, 
+    0 6px 1px rgba(0,0,0,.1), 
+    0 0 5px rgba(0,0,0,.1), 
+    0 1px 3px rgba(0,0,0,.3), 
+    0 3px 5px rgba(0,0,0,.2), 
+    0 5px 10px rgba(0,0,0,.25), 
+    0 10px 10px rgba(0,0,0,.2), 
+    0 20px 20px rgba(0,0,0,.15);
+}
 </style>
 </head>
 <body>
 
-<div class="box">
+<div class="box center">
 <img class="logo" src="https://sobloxsy.com/images/logo_sm.png">
-<h1>404</h1>
+<h1 class="fourofour">404. lol</h1>
 <p> Page not found, sorry.</p>
 <p> return to <a href="https://sobloxsy.com">sobloxsy.</a></p>
 </div>
