--- a/about.html
+++ b/about.html
@@ -1995,7 +1995,7 @@ dl dd {
         <div id="includedContent"></div>
         <div id="view">
           <div class="inner about">
-            <h1 ><span>About Sobloxsy Corp.</span></h1>
+            <h1 ><span>About Sobloxsy LLC.</span></h1>
             <div class="masthead">
               <div class="body">
                 <p><span>We make website parodies. For example: Google</span></p>
@@ -2017,7 +2017,6 @@ dl dd {
 
     <script src="/js/about.intl.js"></script>
     <script src="/js/about.bundle.js"></script>
-    <div class="ReactModalPortal"></div>
     <script
       id="wistia_script"
       type="text/javascript"
