--- a/404.html
+++ b/404.html
@@ -158,16 +158,17 @@ font-size: 70px;
     0 10px 10px rgba(0,0,0,.2), 
     0 20px 20px rgba(0,0,0,.15);
 }
+
 </style>
 </head>
 <body>
-
 <div class="box center">
-<img class="logo" src="https://sobloxsy.com/images/logo_sm.png">
-<h1 class="fourofour">404. lol</h1>
-<p> Page not found, sorry.</p>
-<p> return to <a href="https://sobloxsy.com">sobloxsy.</a></p>
+  <a href="https://sobloxsy.com"> <img class="logo" src="https://files.sobloxsy.com/logo.png" /> </a>
+  <h1 class="fourofour">404, lol</h1>
+  <p>Page not found, sorry.</p>
+  <p>return to <a href="https://sobloxsy.com">sobloxsy.</a></p>
 </div>
+
 
 </body>
 </html>
