--- a/about.html
+++ b/about.html
@@ -1998,10 +1998,11 @@ dl dd {
             <h1 ><span>About Sobloxsy LLC.</span></h1>
             <div class="masthead">
               <div class="body">
-                <p><span>We make website parodies. For example: Google</span></p>
+                <p><span>We make website parodies. For example: Google, Microsoft and Apple. We Don't make parodies without credit.</span></p>
                 <p></p>
                 <p>
-                  <span
+                  <span 
+                  style="font-size: 10px;"
                     >This website is made to look like scratch.mit.edu make sure
                     to check them out!</span
                   >
@@ -2017,13 +2018,10 @@ dl dd {
 
     <script src="/js/about.intl.js"></script>
     <script src="/js/about.bundle.js"></script>
-    <script
-      id="wistia_script"
-      type="text/javascript"
-      src="https://fast.wistia.com/assets/external/E-v1.js"
-    ></script>
+
   </body>
 </html>
+
 
 </body>
 </html>
