--- a/about.html
+++ b/about.html
@@ -1998,7 +1998,7 @@ dl dd {
             <h1 ><span>About Sobloxsy LLC.</span></h1>
             <div class="masthead">
               <div class="body">
-                <p><span>We make website parodies. For example: Google, Microsoft and Apple. We Don't make parodies without credit.</span></p>
+                <p><span>We make website parodies. For example: Google, Microsoft and Apple. We don't make parodies without credit.</span></p>
                 <p></p>
                 <p>
                   <span 
