--- a/iwannasay.html
+++ b/iwannasay.html
@@ -20,7 +20,7 @@ height: 100%;
 
 input {
 width: 80%; 
-height: 300px;
+height: 400px;
 font-size: 20px;
 text-align: top;
   border-radius: 24px !important;
@@ -42,9 +42,9 @@ color: grey;
 </head>
 
 <body>
-<h1 style="">I wanna say..</h1>
+<h1 style="text-align:center;">I wanna say..</h1>
 
-<input style="" placeholder="Enter text">
+<input placeholder="Enter text">
 </body>
 
 </html>
