--- a/index.html
+++ b/index.html
@@ -205,10 +205,9 @@ dl dd {
   margin: 0.5em 0;
   border: 0;
   cursor: pointer;
-  padding: 1em 1.25em;
   font-size: 0.8rem;
-  font-weight: bold;
-  border-radius: 5px;
+
+  border-radius: 50px;
   background-color: rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.15);
   color: white;
@@ -252,7 +251,7 @@ dl dd {
   margin-right: -0.25rem;
 }
 
-.watch-button {
+.watch-buttonj {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -3913,8 +3912,8 @@ iframe {
             <a href="/Sitemap">
               <div class="subnav-button button">Sitemap</div></a
             >
-            <a href="/testplace">
-              <div class="subnav-button button">Test</div></a
+            <a href="/products/">
+              <div class="subnav-button button">Our Products</div></a
             >
           </div>
         </div>
