--- a/about.html
+++ b/about.html
@@ -1989,17 +1989,16 @@ dl dd {
     <script async="" src="//www.google-analytics.com/analytics.js"></script>
     <script src="/js/polyfill.min.js"></script>
   </head>
-  <body data-new-gr-c-s-check-loaded="14.1001.0" data-gr-ext-installed="">
+  <body>
     <div id="app">
       <div class="page">
-        <div id="includedContent"></div>
         <div id="view">
           <div class="inner about">
             <h1 ><span>About Sobloxsy LLC.</span></h1>
             <div class="masthead">
               <div class="body">
                 <p><span>We make website parodies. For example: Google, Microsoft and Apple. We don't make parodies without credit.</span></p>
-                <p></p>
+                <a href="https://sobloxsy.com/products/">Check out our websites</a>
                 <p>
                   <span 
                   style="font-size: 10px;"
